<resources>
    <string name="app_name">BlackBook Strength</string>
    <string name="Title">BlackBook Strength</string>
    <string name="week1">WEEK 1</string>
    <string name="week2">WEEK 2</string>
    <string name="week3">WEEK 3</string>
    <string name="week4">DELOAD</string>
    <string name="hintDeadliftMax">Deadlift 1RM</string>
    <string name="hintSquatMax">Squat 1RM</string>
    <string name="hintBenchMax">Bench 1RM</string>
    <string name="hintOHPMax">OHP 1RM</string>
    <string name="title_main">Main</string>
    <string name="title_1rm">1RM</string>
    <string name="title_weight_in">Weight-In</string>
    <string name="exercise_placeholder">Exercise</string>
    <string name="check_mark_placeholder">Check Mark</string>
    <string name="weight_place_holder">300</string>
    <string name="weight_unit_place_holder">lbs</string>
    <string name="percentage_place_holder">65%</string>
    <string name="reps_place_holder">X 3 REPS</string>
    <string name="logs_tab">Logs</string>
    <string name="date">Mth-00-0000</string>
    <string name="title_calorie">2000</string>
    <string name="calorie_unit_placeholder">Cal</string>
    <string name="loginBtn">Login</string>
    <string name="registerBtn">Don\'t have an account?</string>
    <string name="userName">Username</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="confPasswordHint">Confirm Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="success_register">Register successful</string>
    <string name="registerInstruction">Fill out the following fields</string>
    <string name="calorieGoalHint">Calorie Goal</string>
    <string name="weightGoalHint">Weight Goal</string>
    <string name="settings">Settings</string>
    <string name="deadlift">Deadlift</string>
    <string name="bench">Bench</string>
    <string name="squat">Squat</string>
    <string name="ohp">OHP</string>
    <string name="profile_tab">Profile</string>
    <string name="settings_label">Setting Label</string>
    <string name="settings_sublabel">Settings Sublabel</string>
    <string name="edit_1rm">1RM</string>
    <string name="edit_profile">Profile</string>
    <string name="edit_goals">Goals</string>
    <string name="edit_assistance_exercise">Assistance Exercise</string>
    <string name="blackbook">BlackBook</string>
    <string name="strength">Strength</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="edit_weight_goals">Edit Weight Goals</string>
    <string name="edit_caloric_goals">Edit Caloric Goals</string>
    <string name="calories">Calories</string>
    <string name="enter_value">Enter Value</string>
    <string name="edit_password">Edit Password</string>
    <string name="edit_username">Edit Username</string>
    <string name="register">Register</string>
    <string name="lift">Lift</string>
    <string name="logs">Logs</string>
    <string name="profile">Profile</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="resetBtn">Reset</string>
    <string name="resetPwdBtn">Reset Password</string>
    <string name="loading">Loading</string>
    <string name="MainLift">Main Lift</string>
    <string name="searchExercise">Search exercise</string>
    <string name="reps">Reps</string>
    <string name="sets">Sets</string>
    <string name="x">X</string>
    <string name="exercise_name">Exercise Name</string>

</resources>
